--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 		</script>
 	</div>
 </footer>
+	  <script>
+		  document.getElementById("toc-title").innerHTML = "Daftar Isi";
+	  </script>
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
