"On this page" is changed to "Daftar Isi"

--- a/index.html
+++ b/index.html
@@ -314,12 +314,11 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
         		const currAccsDate = whatDate + " " + monthName[whatMonth] + " " + whatYear
         		return currAccsDate
     		}
+
+        document.getElementById("toc-title").innerHTML = "Daftar Isi"
 		</script>
 	</div>
 </footer>
-	  <script>
-		  document.getElementById("toc-title").innerHTML = "Daftar Isi";
-	  </script>
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
