Navbar, "About" is changed to "Tentang"

--- a/muhammadrezafahlevi.html
+++ b/muhammadrezafahlevi.html
@@ -118,7 +118,7 @@ ul.task-list li input[type="checkbox"] {
   <li class="nav-item">
     <a class="nav-link active" href="./muhammadrezafahlevi.html" rel="" target="" aria-current="page"><i class="bi bi-info-circle-fill" role="img">
 </i> 
- <span class="menu-text">About</span></a>
+ <span class="menu-text">Tentang</span></a>
   </li>  
 </ul>
             <div class="quarto-navbar-tools">
