--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Buatan Orang Indonesia 🇮🇩">
 
 <title>Fahlevisia</title>
+<meta name="google-site-verification" content="BW_4mfTSFi-1-HchioiSLv-27FJ_1SX-TXUvQmEZLYw" />
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
