--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ ul.task-list li input[type="checkbox"] {
       <h1 class="title">Fahlevisia</h1>
                   <div>
         <div class="description">
-          Repositori Digital Personal Buatan Orang Indonesia 🇮🇩
+          Repositori Digital Personal Buatan Orang <span property="schema:inLanguage">Indonesia</span> 🇮🇩
         </div>
       </div>
                 </div>
@@ -219,7 +219,7 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 <h1>Apa itu Fahlevisia</h1>
 <div resource="#fahlevisia" typeof="schema:WebPage">
 <div class="alinea">
-<p><span property="schema:description"><a href="#fahlevisia">Fahlevisia</a> merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, <a href="./muhammadrezafahlevi.html#me" property="schema:copyrightHolder" resource="./muhammadrezafahlevi.html#me" typeof="schema:Person">M.R. Fahlevi</a>, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal <a href="./muhammadrezafahlevi.html#me" property="schema:creator" resource="./muhammadrezafahlevi.html#me">M.R. Fahlevi</a>. </span></p>
+<p><span property="schema:description"><a href="#fahlevisia">Fahlevisia</a> merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, <a href="./muhammadrezafahlevi.html#me" property="schema:copyrightHolder" resource="https://www.fahlevisia.com/muhammadrezafahlevi.html#me" typeof="schema:Person">M.R. Fahlevi</a>, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal <a href="./muhammadrezafahlevi.html#me" property="schema:creator" resource="https://www.fahlevisia.com/muhammadrezafahlevi.html#me">M.R. Fahlevi</a>. </span></p>
 <p><span class="math inline">\(\qquad\)</span>Kebanyakan dari manuskrip kami (jika tidak semua) berlisensi di bawah <a property="schema:relatedLink" resource="http://creativecommons.org/licenses/by-sa/4.0/" typeof="schema:URL" href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank"><i>Attribution-NonCommercial-ShareAlike 4.0 International</i></a> (Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional). Kami berusaha sebaik mungkin untuk melestarikan manuskrip-manuskrip kami dapat dipahami baik oleh pembaca yang terhormat maupun mesin (<em>machine readable</em>). Agar dokumen-dokumen ini dapat dibaca oleh mesin, kami menggunakan teknologi <a property="schema:relatedLink" resource="https://en.wikipedia.org/wiki/Semantic_Web" typeof="schema:URL" href="https://en.wikipedia.org/wiki/Semantic_Web" target="_blank">Web Semantik (Semantic Web, Web 3.0, sekarang lebih dikenal dengan istilah <em>web of data</em>)</a> berikut:</p>
 <ul>
 <li><p>
@@ -266,6 +266,9 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 </div>
 </blockquote>
 </div>
+<span resource="#fahlevisia">
+    <span property="schema:dateModified" content="2024-01-25"></span>
+</span>
 <script>
     document.getElementById("toc-title").innerHTML = "Daftar Isi"
 </script>
@@ -282,16 +285,18 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 		position: absolute; 
 		width: 100%; 
 		padding-left:3pc;
-		font-size: 3pc;">
-		<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+		font-size: 3pc;" resource="https://www.fahlevisia.com/#fahlevisia" typeof="schema:WebPage">
+		<a href="https://www.fahlevisia.com">
+			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+		</a>
 		<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by Muhammad Reza Fahlevi</p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight" property="schema:copyrightYear"></span> by Muhammad Reza Fahlevi</p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
 			function obtCopyRightYear() {
 				const copyRightYear = new Date()
-				document.getElementById("cpRight").innerHTML = copyRightYear.getFullYear()
+				document.getElementById("cpRight").innerHTML =  "<span typeof='schema:Number'>" + copyRightYear.getFullYear() + "</span>"
 			}
 
 			function getCurrAccsReader(EnOrId, isAbbr) {
