--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 </div>
 <span resource="#fahlevisia">
     <span property="schema:dateModified" content="2024-01-25"></span>
+    <span property="schema:copyrightYear" content="2024"></span>
 </span>
 <script>
     document.getElementById("toc-title").innerHTML = "Daftar Isi"
@@ -285,12 +286,12 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 		position: absolute; 
 		width: 100%; 
 		padding-left:3pc;
-		font-size: 3pc;" resource="https://www.fahlevisia.com/#fahlevisia" typeof="schema:WebPage">
+		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
 			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 		</a>
 		<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight" property="schema:copyrightYear"></span> by Muhammad Reza Fahlevi</p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by Muhammad Reza Fahlevi</p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
