--- a/muhammadrezafahlevi.html
+++ b/muhammadrezafahlevi.html
@@ -424,12 +424,12 @@ Bachelor of Computer Science (Sarjana Ilmu Komputer - <b><span property="schema:
 		position: absolute; 
 		width: 100%; 
 		padding-left:3pc;
-		font-size: 3pc;" resource="https://www.fahlevisia.com/#fahlevisia" typeof="schema:WebPage">
+		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
 			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 		</a>
 		<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight" property="schema:copyrightYear"></span> by Muhammad Reza Fahlevi</p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by Muhammad Reza Fahlevi</p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
