--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@ Data repositori yang kami punya yang diperoleh dari experimen yang telah dilakuk
 		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
 			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+			<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
 		</a>
-		<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by Muhammad Reza Fahlevi</p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/muhammadrezafahlevi.html">Muhammad Reza Fahlevi</a></p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
