--- a/muhammadrezafahlevi.html
+++ b/muhammadrezafahlevi.html
@@ -114,7 +114,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Beranda</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./tlsnYth.html" rel="" target=""><i class="bi bi-newspaper" role="img">
+    <a class="nav-link" href="./artikelYth.html" rel="" target=""><i class="bi bi-newspaper" role="img">
 </i> 
  <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
   </li>  
