--- a/post_artikelYth/IntervensiStunting/index.html
+++ b/post_artikelYth/IntervensiStunting/index.html
@@ -198,7 +198,7 @@ ul.task-list li input[type="checkbox"] {
     <div class="mymeta">
         <div class="mymeta-title">Hak Cipta</div>
         <div style="font-size: .9em;">
-            <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/">Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok</a> oleh <span property="cc:attributionName">Yulisa Siregar</span> berlisensi di bawah lisensi <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">Attribution-NonCommercial-ShareAlike 4.0 International (Attribusi-NonKomersial-BerbagiSerupa)<br><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
+            <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/">Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok</a> oleh <span property="cc:attributionName">Yulisa Siregar</span> berlisensi di bawah lisensi <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">Attribution-NonCommercial-ShareAlike 4.0 International (Attribusi-NonKomersial-BerbagiSerupa)<br><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
         </div>
     </div>
     <div class="mymeta">
@@ -206,35 +206,35 @@ ul.task-list li input[type="checkbox"] {
             <summary class="mymeta-title" style="opacity: 1;"><span>Kutip Artikel Ini</span></summary>
             <div class="mymeta-title">Harvard</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Siregar, Yulisa. (2024) 'Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok'. Tersedia: https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/ (Accessed: <span id="currAccsHarvard"></span>).</p>
+                <p>Siregar, Yulisa. (2024) 'Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok'. Tersedia: https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/ (Accessed: <span id="currAccsHarvard"></span>).</p>
             </div>
             <div class="mymeta-title">APA</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Siregar, Yulisa. (2024, January 29) <i>Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok</i>. Fahlevisia. Diakses <span id="currAccsAPA"></span>, dari https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/</p>
+                <p>Siregar, Yulisa. (2024, January 29) <i>Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok</i>. Fahlevisia. Diakses <span id="currAccsAPA"></span>, dari https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/</p>
             </div>
             <div class="mymeta-title">Chicago</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Siregar, Yulisa. "Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok" Diakses <span id="currAccsChicago"></span>. https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/</p>
+                <p>Siregar, Yulisa. "Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok" Diakses <span id="currAccsChicago"></span>. https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/</p>
             </div>
             <div class="mymeta-title">IEEE</div>
             <div style="text-align: justify; font-size: .9em;;">
-                <p>Y. Siregar. "kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok" <i>Fahlevisia</i>, Jan. 29, 2024. Diakses: <span id="currAccsIEEE"></span>. [Online]. Tersedia: https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/</p>
+                <p>Y. Siregar. "kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok" <i>Fahlevisia</i>, Jan. 29, 2024. Diakses: <span id="currAccsIEEE"></span>. [Online]. Tersedia: https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/</p>
             </div>
             <div class="mymeta-title">MHRA</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Siregar, Yulisa, Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok (2024) &lt;https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/&gt; [diakses <span id="currAccsMHRA"></span>]</p>
+                <p>Siregar, Yulisa, Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok (2024) &lt;https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/&gt; [diakses <span id="currAccsMHRA"></span>]</p>
             </div>
             <div class="mymeta-title">MLA</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Yulisa Siregar. "Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok". <i>Fahlevisia</i>, 29 January 2024, https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/</p>
+                <p>Yulisa Siregar. "Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok". <i>Fahlevisia</i>, 29 January 2024, https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/</p>
             </div>
             <div class="mymeta-title">OSCOLA</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Yulisa Siregar, 'Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok' (Fahlevisia, 29 January 2024) &lt;https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/&gt; diakses <span id="currAccsOSCOLA"></span>.</p>
+                <p>Yulisa Siregar, 'Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok' (Fahlevisia, 29 January 2024) &lt;https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/&gt; diakses <span id="currAccsOSCOLA"></span>.</p>
             </div>
             <div class="mymeta-title">Vancouver</div>
             <div style="text-align: justify; font-size: .9em;">
-                <p>Siregar Y. Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok [Internet]. 2024 [dikutip <span id="currAccsVancouver"></span>]. Tersedia di: https://www.fahlevisia.com/post_tlsYth/PenyuluhanStunting/</p>
+                <p>Siregar Y. Kegiatan Intervensi Jumlah Anak Stunting di Wilayah Kerja UPT Puskesmas Kuok [Internet]. 2024 [dikutip <span id="currAccsVancouver"></span>]. Tersedia di: https://www.fahlevisia.com/post_artikelYth/IntervensiStunting/</p>
             </div>
         </details>
     </div>
@@ -249,7 +249,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div class="alinea">
 <p>Stunting merupakan suatu masalah gizi kronis yang disebabkan oleh beberapa faktor, yang mana, faktor terbesarnya ialah nutrisi dan hormon pertumbuhan yang kurang. Stunting merupakan masalah kesehatan yang harus ditangani secara serius. Hal ini berdasarkan hasil olah data yang dilakukan oleh Riset Kesehatan Dasar (Riskesdas), yang menemukan bahwa angka stunting yang melambung cukup tinggi, yaitu 36.8% pada tahun 2007, dan pada tahun 2013 mencapai 37.2% dari 33 provinsi di Indonesia. Secara global, angka ini menunjukkan bahwa Indonesia masih memiliki kasus kekurangan gizi<span class="math inline">\(\textemdash\)</span>terutama masalah stunting<span class="math inline">\(\textemdash\)</span>yang tidak sedikit. Karena, <em>World Health Organization</em> (WHO) menetapkan, bahwa, suatu kasus kekurangan gizi pada suatu negara termasuk ke dalam kategori rendah apabila persentasi kasus tersebut di bawah 20%.</p>
-<p><span class="math inline">\(\qquad\)</span>Dengan jumlah angka anak stunting yang tidak sedikit, Tim Percepatan Penurunan Stunting (TPPS) bersama dengan Tim Pelaksana Gizi (TPS) Unit Pelayanan Terpadu Pusat Kesehatan Masyarakat (UPT. PUSKESMAS Kuok) melaksanakan kegiatan intervensi jumlah anak stunting. Perlu diketahui bahwa terdapat 9 desa yang merupakan cakupan wilayah kerja UPT Puskesmas Kuok, yaitu:</p>
+<p><span class="math inline">\(\qquad\)</span>Dengan jumlah angka anak stunting yang tidak sedikit, Tim Percepatan Penurunan Stunting (TPPS) bersama dengan Tim Pelaksana Gizi (TPS) Unit Pelayanan Terpadu Pusat Kesehatan Masyarakat (UPT. Puskesmas Kuok) melaksanakan kegiatan intervensi jumlah anak stunting. Perlu diketahui bahwa terdapat 9 desa yang merupakan cakupan wilayah kerja UPT Puskesmas Kuok, yaitu:</p>
 <div class="alinea" style="font-family: Georgia,Cambria,'Times New Roman',Times,serif">
 <ul>
 <li>Desa Kuok</li>
@@ -263,9 +263,9 @@ ul.task-list li input[type="checkbox"] {
 <li>Desa Bukit Melintang</li>
 </ul>
 </div>
-<p>Kegiatan intervensi terdiri atas 2 tahap utama, yaitu tahap validasi dan tahap pemberian bantuan. Validasi dilakukan pada tanggal 4 Januari 2024. Pada tahap ini, TPPS dan TPG UPT. PUSKESMAS Kuok turun ke wilayah kerja, mengunjungi rumah ke rumah warga desa dan memvalidasi keluarga yang mana anaknya teridentifikasi dan/atau berpotensi stunting. Tahap validasi ini berguna untuk keefektifan tahap pemberian bantuan. Berikut merupakan video tahap validasi</p>
+<p>Kegiatan intervensi terdiri atas 2 tahap utama, yaitu tahap validasi dan tahap pemberian bantuan. Validasi dilakukan pada tanggal 4 Januari 2024. Pada tahap ini, TPPS dan TPG UPT. Puskesmas Kuok turun ke wilayah kerja, mengunjungi rumah ke rumah warga desa dan memvalidasi keluarga yang mana anaknya teridentifikasi dan/atau berpotensi stunting. Tahap validasi ini berguna untuk keefektifan tahap pemberian bantuan. Berikut merupakan video tahap validasi</p>
 <div style="padding-left: 15%;">
-<div class="quarto-video"><video id="video_shortcode_videojs_video1" width="250" class="video-js vjs-default-skin " controls="" preload="auto" data-setup="{}" title="Tahap Validasi"><source src="https://github.com/m-RezaFahlevi/m-RezaFahlevi.github.io/raw/main/post_tlsYth/PenyuluhanStunting/_assets/validasi.mp4"></video></div>
+<div class="quarto-video"><video id="video_shortcode_videojs_video1" width="250" class="video-js vjs-default-skin " controls="" preload="auto" data-setup="{}" title="Tahap Validasi"><source src="https://github.com/m-RezaFahlevi/m-RezaFahlevi.github.io/raw/main/post_artikelYth/IntervensiStunting/_assets/validasi.mp4"></video></div>
 </div>
 <p>Tahap pemberian bantuan dilakukan pada tanggal 24 Januari 2024. Pada tahap ini, rumah-rumah warga desa yang sudah divalidasi diberikan bantuan berupa:</p>
 <div class="alinea" style="font-family: Georgia,Cambria,'Times New Roman',Times,serif">
@@ -278,9 +278,9 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <p>Keluarga yang sudah divalidasi dan diberikan bantuan akan diperhatikan bagaimana pertumbuhan gizi anak mereka. Berikut merupakan video tahap pemberian bantuan.</p>
 <div style="padding-left: 15%;">
-<div class="quarto-video"><video id="video_shortcode_videojs_video2" width="250" class="video-js vjs-default-skin " controls="" preload="auto" data-setup="{}" title="Pemberian Bantuan"><source src="https://github.com/m-RezaFahlevi/m-RezaFahlevi.github.io/raw/main/post_tlsYth/PenyuluhanStunting/_assets/pemberian_bantuan.mp4"></video></div>
+<div class="quarto-video"><video id="video_shortcode_videojs_video2" width="250" class="video-js vjs-default-skin " controls="" preload="auto" data-setup="{}" title="Pemberian Bantuan"><source src="https://github.com/m-RezaFahlevi/m-RezaFahlevi.github.io/raw/main/post_artikelYth/IntervensiStunting/_assets/pemberian_bantuan.mp4"></video></div>
 </div>
-<p><span class="math inline">\(\qquad\)</span>Kegiatan intervensi jumlah anak stunting ini hingga sekarang masih digencarkan oleh TPG dan TPPS. Kegiatan intervensi ini merupakan bentuk usaha nyata oleh TPPS bersama TPG UPT. PUSKESMAS Kuok dalam mengurangi jumlah angka anak stunting di Indonesia, khususnya di wilayah kerja UPT. PUSKESMAS Kuok.</p>
+<p><span class="math inline">\(\qquad\)</span>Kegiatan intervensi jumlah anak stunting ini hingga sekarang masih digencarkan oleh TPG dan TPPS. Kegiatan intervensi ini merupakan bentuk usaha nyata oleh TPPS bersama TPG UPT. Puskesmas Kuok dalam mengurangi jumlah angka anak stunting di Indonesia, khususnya di wilayah kerja UPT. Puskesmas Kuok.</p>
 </div>
 <script>
     document.getElementsByClassName("quarto-title-meta-heading")[0].innerHTML = "Penulis"
