--- a/muhammadrezafahlevi.html
+++ b/muhammadrezafahlevi.html
@@ -207,7 +207,7 @@ ul.task-list li input[type="checkbox"] {
             <i class="bi bi-twitter"></i>
             <span class="about-link-text">Twitter</span>
         </a>
-        <a href="mrezafahleviresume.pdf" class="about-link">
+        <a href="https://www.fahlevisia.com/resume_mrfahlevi.pdf" class="about-link">
             <i class="bi bi-file-earmark-person"></i>
             <span class="about-link-text">Resume</span>
         </a>
