--- a/artikelYth.html
+++ b/artikelYth.html
@@ -147,6 +147,11 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Beranda</span></a>
   </li>  
   <li class="nav-item">
+    <a class="nav-link" href="./articles.html" rel="" target=""><i class="bi bi-journal-text" role="img">
+</i> 
+ <span class="menu-text">Artikel</span></a>
+  </li>  
+  <li class="nav-item">
     <a class="nav-link active" href="./artikelYth.html" rel="" target="" aria-current="page"><i class="bi bi-newspaper" role="img">
 </i> 
  <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
@@ -209,7 +214,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Stunting,TPG,TPPS,UPT Puskesmas Kuok" data-listing-date-sort="1706461200000" data-listing-file-modified-sort="1706525215616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
+<div class="quarto-post image-right" data-index="0" data-categories="Stunting,TPG,TPPS,UPT Puskesmas Kuok" data-listing-date-sort="1706461200000" data-listing-file-modified-sort="1706544076166" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
 <div class="thumbnail">
 <p><a href="./post_artikelYth/IntervensiStunting/index.html"> <img src="./post_artikelYth/IntervensiStunting/www/documentation.jpg" class="thumbnail-image"> </a></p>
 </div>
