--- a/muhammadrezafahlevi.html
+++ b/muhammadrezafahlevi.html
@@ -114,6 +114,11 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Beranda</span></a>
   </li>  
   <li class="nav-item">
+    <a class="nav-link" href="./articles.html" rel="" target=""><i class="bi bi-journal-text" role="img">
+</i> 
+ <span class="menu-text">Artikel</span></a>
+  </li>  
+  <li class="nav-item">
     <a class="nav-link" href="./artikelYth.html" rel="" target=""><i class="bi bi-newspaper" role="img">
 </i> 
  <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
