--- a/post_articles/linav/index.html
+++ b/post_articles/linav/index.html
@@ -7,7 +7,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Muhammad Reza Fahlevi">
+<meta name="author" content="Muhammad Reza Fahlevi   Verified  ">
 <meta name="dcterms.date" content="2024-02-12">
 <meta name="description" content="A C++ header file as an extension of std::vector<double>">
 <meta property="og:title" content="Linav: Computation of Vectors in Linear Algebra">
@@ -170,6 +170,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </i> 
  <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="../../blog.html" rel="" target=""><i class="bi bi-journal-richtext" role="img">
+</i> 
+ <span class="menu-text">Blog</span></a>
+  </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
@@ -208,7 +213,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <div>
       <div class="quarto-title-meta-heading">Author</div>
       <div class="quarto-title-meta-contents">
-               <p>Muhammad Reza Fahlevi </p>
+               <p>Muhammad Reza Fahlevi <svg aria-label="Verified" class="x1lliihq x1n2onr6" fill="rgb(0, 149, 246)" height="18" role="img" viewbox="0 0 40 40" width="18"></svg><br>
+  <title>&lt;br /&gt;
+  Verified&lt;br /&gt;
+  </title><br>
+  <path d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z" fill-rule="evenodd"></path> </p>
             </div>
     </div>
       
