--- a/articles.html
+++ b/articles.html
@@ -152,6 +152,11 @@ ul.task-list li input[type="checkbox"] {
 </i> 
  <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./blog.html" rel="" target=""><i class="bi bi-journal-richtext" role="img">
+</i> 
+ <span class="menu-text">Blog</span></a>
+  </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
@@ -204,7 +209,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Linear Algebra,Vectors,C++" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1707712826433" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="34">
+<div class="quarto-post image-right" data-index="0" data-categories="Linear Algebra,Vectors,C++" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1707730502824" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="34">
 <div class="thumbnail">
 <p><a href="./post_articles/linav/index.html"> <img src="./post_articles/linav/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
@@ -240,7 +245,11 @@ C++
 Feb 12, 2024
 </div>
 <div class="listing-author">
-Muhammad Reza Fahlevi
+Muhammad Reza Fahlevi <svg aria-label="Verified" class="x1lliihq x1n2onr6" fill="rgb(0, 149, 246)" height="18" role="img" viewbox="0 0 40 40" width="18">
+<title>
+Verified
+</title>
+<path d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z" fill-rule="evenodd"></path></svg>
 </div>
 </a>
 </div>
