--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Fahlevisia - Articles</title>
+<title>Fahlevisia - Artikel</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -175,7 +175,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-page-left">
-      <h1 class="title">Fahlevisia - Articles</h1>
+      <h1 class="title">Fahlevisia - Artikel</h1>
                       </div>
   </div>
     
@@ -201,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <div class="animate__animated animate__fadeInUp">
-<span><p>A (research) article with the topic (but not limited to) evolutionary computation, numerical analysis, and optimization.</p></span>
+  <span><p>Artikel (riset) dengan topik (tapi tidak terbatas pada) komputasi evolusioner (<i>evolutionary computation</i>), analisis numerik (<i>numerical analysis</i>), dan optimisasi (<i>optimization</i>).</p></span>
 </div>
 
 
