--- a/artikelYth.html
+++ b/artikelYth.html
@@ -119,9 +119,6 @@ ul.task-list li input[type="checkbox"] {
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
 
 <link rel="stylesheet" href="styles.css">
-<meta property="og:title" content="Fahlevisia - Artikel Bpk/Ibu Yth.">
-<meta property="og:description" content="Berisikan Artikel Yang Ditulis oleh Bapak/Ibu Yang Terhormat">
-<meta property="og:image" content="./post_artikelYth/IntervensiStunting/www/documentation.jpg">
 </head>
 
 <body class="nav-fixed">
@@ -155,6 +152,11 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./artikelYth.html" rel="" target="" aria-current="page"><i class="bi bi-newspaper" role="img">
 </i> 
  <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./blog.html" rel="" target=""><i class="bi bi-journal-richtext" role="img">
+</i> 
+ <span class="menu-text">Blog</span></a>
   </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
