Typos in index.html is fixed

--- a/post_articles/linav/index.html
+++ b/post_articles/linav/index.html
@@ -1011,7 +1011,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
             \vdots\\
             \vert\vert\vec{x}\vert\vert_{2}^{-1}x_{n}
             \end{array}\right)$</td>
-        <td><code>normalize</code></td>
+        <td><code>normalize(x)</code></td>
     </tr>
 </tbody></table>
 
