--- a/post_articles/linav/index.html
+++ b/post_articles/linav/index.html
@@ -10,6 +10,9 @@
 <meta name="author" content="Muhammad Reza Fahlevi   Verified  ">
 <meta name="dcterms.date" content="2024-02-12">
 <meta name="description" content="A C++ header file as an extension of std::vector<double>">
+
+<title>Linav: Computation of Vectors in Linear Algebra</title>
+
 <meta property="og:title" content="Linav: Computation of Vectors in Linear Algebra">
 <meta property="og:description" content="A C++ header file as an extension of std::vector&lt;double&gt;">
 <meta property="og:url" content="https://www.fahlevisia.com/post_articles/linav/">
@@ -22,7 +25,6 @@
 <meta property="og:article:tag" content="Vectors">
 <meta property="og:article:tag" content="C++">
 
-<title>Linav: Computation of Vectors in Linear Algebra</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -1011,7 +1013,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
             \vdots\\
             \vert\vert\vec{x}\vert\vert_{2}^{-1}x_{n}
             \end{array}\right)$</td>
-        <td><code>normalize(x)</code></td>
+        <td><code>normalize</code></td>
     </tr>
 </tbody></table>
 
@@ -1438,6 +1440,16 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
             <p>Fahlevi MR. Linav: Computation of Vectors in Linear Algebra [Internet]. 2024 [cited <span id="currAccsVancouver"></span>]. Available from: https://www.fahlevisia.com/post_articles/linav/</p>
         </div>
     </details>
+    <div class="mymeta-title">Dukung Fahlevisia</div>
+    <div class="sociabuzz-fahlevisia-tribe">
+        <img alt="FahlevisiaIcon" src="https://www.fahlevisia.com/www/fahlevisiaicon.png" width="144" height="144" style="border-radius: 100%; margin-top: 3%; margin-bottom: 1%;">
+        <div>Fahlevisia</div>
+        <div>Repositori Digital Personal</div>
+        <a href="https://sociabuzz.com/fahlevisia/support" target="_blank">
+            <button class="btn-to-SociaBuzz"><i class="bi bi-cup-hot"></i> Beri Dukungan</button>
+        </a>
+        <div><i>Fahlevisia mengucapkan terima kasih kepada pembaca yang terhormat yang telah mendukung dan/atau mendedikasikan sebagian waktunya untuk membaca tulisan kami.</i></div>
+    </div>
 </div>
 
 
