--- a/blog.html
+++ b/blog.html
@@ -193,7 +193,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Aljabar Linear">Aljabar Linear <span class="quarto-category-count">(1)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Vektor">Vektor <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Aljabar Linear">Aljabar Linear <span class="quarto-category-count">(1)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Fahlevisia">Fahlevisia <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Google Search">Google Search <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Vektor">Vektor <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -213,7 +213,49 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Aljabar Linear,C++,Vektor" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1707753162754" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="0" data-categories="Fahlevisia,Google Search" data-listing-date-sort="1708621200000" data-listing-file-modified-sort="1708681190109" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="thumbnail">
+<p><a href="./post_blog/gsi_achievement/index.html"> <img src="./post_blog/gsi_achievement/thumbnail.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./post_blog/gsi_achievement/index.html">
+<h3 class="no-anchor listing-title">
+Google Mengucapkan Selamat atas Pencapaian Fahlevisia
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('Fahlevisia'); return false;">
+Fahlevisia
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Google Search'); return false;">
+Google Search
+</div>
+</div>
+<a href="./post_blog/gsi_achievement/index.html">
+<div class="listing-description">
+<p>Bentuk apresiasi Google kepada Fahlevisia</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./post_blog/gsi_achievement/index.html">
+<div class="listing-date">
+Feb 23, 2024
+</div>
+<div class="listing-author">
+Muhammad Reza Fahlevi, S.Kom. <svg aria-label="Verified" class="x1lliihq x1n2onr6" fill="rgb(0, 149, 246)" height="18" role="img" viewbox="0 0 40 40" width="18">
+<title>
+Verified
+</title>
+<path d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z" fill-rule="evenodd"></path></svg>
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="Aljabar Linear,C++,Vektor" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1707981599548" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./post_blog/linav/index.html"> <img src="./post_blog/linav/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
