--- a/paper/index.html
+++ b/paper/index.html
@@ -71,9 +71,9 @@ ul.task-list li input[type="checkbox"] {
     }
 
     const options = {
-      valueNames: ['listing-date','listing-title','listing-author','listing-image','listing-description','listing-categories',{ data: ['index'] },{ data: ['categories'] },{ data: ['listing-date-sort'] },{ data: ['listing-file-modified-sort'] }],
+      valueNames: ['listing-date','listing-title','listing-author','listing-subtitle','listing-image','listing-description','listing-categories',{ data: ['index'] },{ data: ['categories'] },{ data: ['listing-date-sort'] },{ data: ['listing-file-modified-sort'] }],
       
-      searchColumns: ["listing-date","listing-title","listing-author","listing-image","listing-description","listing-categories"],
+      searchColumns: ["listing-date","listing-title","listing-author","listing-subtitle","listing-image","listing-description","listing-categories"],
     };
 
     window['quarto-listings'] = window['quarto-listings'] || {};
@@ -146,7 +146,7 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="../paper/index.html" rel="" target="" aria-current="page"><i class="bi bi-journal-text" role="img">
 </i> 
  <span class="menu-text">Paper</span></a>
-  </li>
+  </li>  
   <li class="nav-item">
     <a class="nav-link" href="../blog/index.html" rel="" target=""><i class="bi bi-journal-richtext" role="img">
 </i> 
@@ -188,7 +188,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Linear Algebra">Linear Algebra <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Matrix">Matrix <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Vectors">Vectors <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Linear Algebra">Linear Algebra <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Matrix">Matrix <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Tools">Tools <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Vectors">Vectors <span class="quarto-category-count">(3)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -204,7 +204,57 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="C++,Linear Algebra,Matrix,Vectors" data-listing-date-sort="1712422800000" data-listing-file-modified-sort="1712476021800" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="23">
+<div class="quarto-post image-right" data-index="0" data-categories="C++,Linear Algebra,Tools,Vectors" data-listing-date-sort="1714237200000" data-listing-file-modified-sort="1714296181004" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="28">
+<div class="thumbnail">
+<p><a href="../paper/2024/fsr3/index.html"> <img src="../paper/2024/fsr3/www/compfile_bat.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="../paper/2024/fsr3/index.html">
+<h3 class="no-anchor listing-title">
+The Description of Every Constructors, Functions Member, and Functions of Limav
+</h3>
+<div class="listing-subtitle">
+Learning limav.h through example and do it, the C++ header to do a computation of vectors and matrix.
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('C++'); return false;">
+C++
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Linear Algebra'); return false;">
+Linear Algebra
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Tools'); return false;">
+Tools
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Vectors'); return false;">
+Vectors
+</div>
+</div>
+<a href="../paper/2024/fsr3/index.html">
+<div class="listing-description">
+<p class="alinea" style="font-size: 15px;">
+There is no other way to be better at coding but to keep practice. In this article we disuss about C++ header that we had developed limav.h, an extension of std::vector&lt;double&gt; to do a computation of vectors and matrix in linear algebra. Here, we provide how to install and use limav.h and a description of every constructors, functions member, and functions of limav.h along with its simple example and the output as well. The goal of this article is to be a source of learning limav.h for those who like to do something by do it.
+</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="../paper/2024/fsr3/index.html">
+<div class="listing-date">
+Apr 28, 2024
+</div>
+<div class="listing-author">
+Muhammad Reza Fahlevi <svg aria-label="Verified" class="x1lliihq x1n2onr6" fill="rgb(0, 149, 246)" height="18" role="img" viewbox="0 0 40 40" width="18">
+<title>
+Verified
+</title>
+<path d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z" fill-rule="evenodd"></path></svg>
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="C++,Linear Algebra,Matrix,Tools,Vectors" data-listing-date-sort="1712422800000" data-listing-file-modified-sort="1714233615707" data-listing-date-modified-sort="1714150800000" data-listing-reading-time-sort="23">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr2/index.html"> <img src="../paper/2024/fsr2/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
@@ -214,7 +264,7 @@ ul.task-list li input[type="checkbox"] {
 Limav: Computation of Vectors and Matrix in Linear Algebra
 </h3>
 <div class="listing-subtitle">
-
+A C++ header file to construct vectors and matrix
 </div>
 </a>
 <div class="listing-categories">
@@ -227,13 +277,18 @@ Linear Algebra
 <div class="listing-category" onclick="window.quartoListingCategory('Matrix'); return false;">
 Matrix
 </div>
+<div class="listing-category" onclick="window.quartoListingCategory('Tools'); return false;">
+Tools
+</div>
 <div class="listing-category" onclick="window.quartoListingCategory('Vectors'); return false;">
 Vectors
 </div>
 </div>
 <a href="../paper/2024/fsr2/index.html">
 <div class="listing-description">
-<p>A C++ header file to construct vectors and matrix</p>
+<p class="alinea" style="font-size: 15px;">
+Developing a C++ header is a good practice and we do this at least once in a lifetime. In this paper, we develope our own C++ header to do a numerical computation of linear algebra by making our own C++ header that capable to construct two mathematical objects that mainly used in linear algebra, these are matrix and vectors. Once we have established our own C++ header, we may do a vast application of matrix and vectors by using our own C++ header as a form of intellectual satisfaction.
+</p>
 </div>
 </a>
 </div>
@@ -252,7 +307,7 @@ Verified
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="Linear Algebra,Vectors,C++" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1711349627992" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="34">
+<div class="quarto-post image-right" data-index="2" data-categories="C++,Linear Algebra,Tools,Vectors" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1714235491694" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="34">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr1/index.html"> <img src="../paper/2024/fsr1/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
@@ -262,23 +317,28 @@ Verified
 Linav: Computation of Vectors in Linear Algebra
 </h3>
 <div class="listing-subtitle">
-
+A C++ header file as an extension of std::vector&lt;double&gt;
 </div>
 </a>
 <div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('C++'); return false;">
+C++
+</div>
 <div class="listing-category" onclick="window.quartoListingCategory('Linear Algebra'); return false;">
 Linear Algebra
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Tools'); return false;">
+Tools
 </div>
 <div class="listing-category" onclick="window.quartoListingCategory('Vectors'); return false;">
 Vectors
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('C++'); return false;">
-C++
-</div>
 </div>
 <a href="../paper/2024/fsr1/index.html">
 <div class="listing-description">
-<p>A C++ header file as an extension of std::vector&lt;double&gt;</p>
+<p class="alinea" style="font-size: 15px;">
+C++ is one of favorite programming language for those who are having good understanding in algorithms and interested in computing something manually. One of advantage to do computation by using C++ is its speed when execute the program, it is suitable for approximating hard real-parameter optimization problem. It is so often that such a problem is formulated in the form of vectors, and main operators used in vectors are pointwise (elementwise) addition and s-multiplication. Eventhough there are library out there to do so, it is a good practice to develope our own C++ header for computation of vectors in linear algebra, at least once in a lifetime. By using our own C++ header, it is possible to do a computation of vectors, especially to compute the pointwise addition and s-multiplication which is make it opens a great possibility of interesting application thereof.
+</p>
 </div>
 </a>
 </div>
