--- a/paper/index.html
+++ b/paper/index.html
@@ -188,7 +188,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Linear Algebra">Linear Algebra <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Matrix">Matrix <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Tools">Tools <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Vectors">Vectors <span class="quarto-category-count">(3)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Linear Algebra">Linear Algebra <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Matrix">Matrix <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Tools">Tools <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Vectors">Vectors <span class="quarto-category-count">(3)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -204,7 +204,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="C++,Linear Algebra,Tools,Vectors" data-listing-date-sort="1714237200000" data-listing-file-modified-sort="1714296181004" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="28">
+<div class="quarto-post image-right" data-index="0" data-categories="C++,Linear Algebra,Matrix,Tools,Vectors" data-listing-date-sort="1714237200000" data-listing-file-modified-sort="1714299430561" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="28">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr3/index.html"> <img src="../paper/2024/fsr3/www/compfile_bat.png" class="thumbnail-image"> </a></p>
 </div>
@@ -223,6 +223,9 @@ C++
 </div>
 <div class="listing-category" onclick="window.quartoListingCategory('Linear Algebra'); return false;">
 Linear Algebra
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Matrix'); return false;">
+Matrix
 </div>
 <div class="listing-category" onclick="window.quartoListingCategory('Tools'); return false;">
 Tools
