--- a/mrfahlevi/index.html
+++ b/mrfahlevi/index.html
@@ -214,7 +214,7 @@
 		</ul>
 		<p>Terbitan <i>Non Peer Reviewed:</i></p>
 		<ul>
-			<li><span>Fahlevi, M.R. (2024) &apos;Ikhtisar Buku &quot;Inilah! Wasiat Nabi bagi Para Penuntut Ilmu&quot; karyanya Dr. Wendi Zarman, Daftar Kajian Buku yang Pembaca Menggarisbawahinya. Available at: <a href="https://www.fahlevisia.com/paper/2024/fsr4/">https://www.fahlevisia.com/paper/2024/fsr4/</a></span></li>
+			<li><span>Fahlevi, M.R. (2024) &apos;Ikhtisar Buku &quot;Inilah! Wasiat Nabi bagi Para Penuntut Ilmu&quot; karyanya Dr. Wendi Zarman, Daftar Kajian Buku yang Pembaca Menggarisbawahinya&apos;. Available at: <a href="https://www.fahlevisia.com/paper/2024/fsr4/">https://www.fahlevisia.com/paper/2024/fsr4/</a></span></li>
 			<li><span>Fahlevi, M.R. (2024) &apos;The Description of Every Constructors, Functions Member, and Functions of Limav&apos;. Available at: <a href="https://www.fahlevisia.com/paper/2024/fsr3/">https://www.fahlevisia.com/paper/2024/fsr3/</a></span></li>
 			<li><span>Fahlevi, M.R. (2024) &apos;Limav: Computation of Matrix and Vectors in Linear Algebra&apos;. Available at: <a href="https://www.fahlevisia.com/paper/2024/fsr2/">https://www.fahlevisia.com/paper/2024/fsr2/</a></span></li>
 			<li><span>Fahlevi, M.R. (2024) &apos;Linav: Computation of Vectors in Linear Algebra&apos;. Available at: <a href="https://www.fahlevisia.com/paper/2024/fsr1/">https://www.fahlevisia.com/paper/2024/fsr1/</a></span></li>
